Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12113

Switching visual modes while already in a different visual mode deselects selection and does nothing instead

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.1.0
    • FakeVim
    • None
    • 3728da8825c70c79e7a478c09e5cba7be65f4081

    Description

      Reproduction example:

      1. enter character selection visual mode
      2. move cursor around
      3. activate linewise selection visual mode with V

      Selection deselects. Should switch to linewise selection visual mode instead, as if you had entered linewise selection visual mode using the start and end markers from step 1. Then if you do:

      4. move cursor around
      5. enter block selection visual mode

      It would then switch to block selection visual mode, using the new start and end markers from step 3.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            ghossal Jeremy Hallah
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes