FakeVim: Commands 'v', 'V' and 'C-v' work in visual mode

Task-number: QTCREATORBUG-12113
Change-Id: Ib98930347a23f672833d50e5b903fd90445d7462
Reviewed-by: hjk <hjk121@nokiamail.com>